Bug 129857 - FILESAVE XLSX The legend shows deleted legend entries too after export
Summary: FILESAVE XLSX The legend shows deleted legend entries too after export
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.5.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-01-07 12:25 UTC by NISZ LibreOffice Team
Modified: 2020-01-17 10:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
exemple file from excel (15.95 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-07 12:26 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Calc (136.13 KB, image/png)
2020-01-07 12:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-07 12:25:05 UTC
Description:
The legend shows deleted legend entries too when the document is saved and reloaded in LibreOffice Calc 6.5.0.0.alpha0+ (x64).


Steps to Reproduce:
    1. Open the attachment #63733 [details] file in 6.5.0.0.alpha0+ (x64).
    2. Save the file as XLSX.
    3. Reload the file.
    4. View the attached screenshot.
    5. Notice, that the deleted legend entries are visible. 

Actual Results:
The deleted legend entries are visible. 

Expected Results:
The deleted legend entries shouldn’t be visible. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 3bf7a861b37a93e196b2e53eeaa5a561d26ed240
CPU threads: 8; OS: Windows 10.0 Build 14393; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-01-07 12:26:45 UTC
Created attachment 156984 [details]
exemple file from excel
Comment 2 NISZ LibreOffice Team 2020-01-07 12:27:19 UTC
Created attachment 156985 [details]
Screenshot of the original and exported document side by side in Calc
Comment 3 Commit Notification 2020-01-10 13:23:57 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/86be3422cd55fa9e44104f1628648061bb6a3495

tdf#129857 Chart OOXML export: fix deleted legend entries

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-01-17 10:04:06 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: cc36c115004cb75037b0e4fdadff09035f765cd5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Tünde Tóth, thanks for fixing this issue!!