crashtesting: mismatched start/end tag assert on reexport of tdf113187-1.pptx

since...

commit 86be3422cd55fa9e44104f1628648061bb6a3495
Date:   Wed Dec 18 16:46:36 2019 +0100

    tdf#129857 Chart OOXML export: fix deleted legend entries

    The legend showed deleted legend entries too after export.

the bare return leaves a start inserted, but no end

Change-Id: If474b53ed7ff18334d095da0a8996a93a8e62e09